components/crud-web-apps/image-builder/manifests/build.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: webapp_mapping
      prefix: /$(prefix)/
      service: builder-web-app-service.$(namespace)
      add_request_headers:
        x-forwarded-prefix: /builder
  labels:
    app: builder-web-app
    kustomize.component: builder-web-app
    run: builder-web-app
  name: builder-web-app-service
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: builder-web-app
    kustomize.component: builder-web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: builder-web-app
    kustomize.component: builder-web-app
  name: builder-web-app-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: builder-web-app
      kustomize.component: builder-web-app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: builder-web-app
        kustomize.component: builder-web-app
    spec:
      containers:
      - env:
        - name: USERID_HEADER
          valueFrom:
            configMapKeyRef:
              key: userid-header
              name: kubeflow-config
        - name: USERID_PREFIX
          valueFrom:
            configMapKeyRef:
              key: userid-prefix
              name: kubeflow-config
        image: davidspek/kaniko-web-app:04a3b7df
        name: builder-web-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
      serviceAccountName: builder-web-app-service-account
      volumes:
      - configMap:
          name: builder-web-app-builder-web-app-config-kb7gtd4b9t
        name: config-volume
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: builder-web-app
    kustomize.component: builder-web-app
  name: builder-web-app-builder-web-app
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /builder
    match:
    - uri:
        prefix: /builder/
    rewrite:
      uri: /
    route:
    - destination:
        host: builder-web-app-service.kubeflow.svc.local
        port:
          number: 80
